# baseball-game-info-chatbot-v2

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/models/: models.py
app/prompts/: prompt.py
app/services/: abstract_scrayper.py  baseball_scrayper.py  gpt_service.py
