[project]
name = "baseball-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "gunicorn>=23.0.0",
    "line-bot-sdk>=3.17.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.2",
]
